# oumodulesbot

./: .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/actions/install-dependencies/: action.yml
.github/workflows/: cc-base-docker-image.yml  docker-image.yml  main.yml
cloudfunctions-cc/: CMakeLists.txt  Dockerfile  Dockerfile.base  interaction.cc  interaction_lib.cc  interaction_lib.h  interaction_lib_test.cc  ou_names.h  vcpkg.json
cloudfunctions-py/: main.py  project.toml
oumodulesbot/: add_module.py  backend.py  cache.json  main.py  ou_utils.py
oumodulesbot/cli_utils/: add_module.py  make_cache_from_website.py  parse_all_html.py  parse_modules_html.py
tests/: test_oumodulesbot.py
