[tool.black]
line-length = 79
preview = true

[tool.poetry]
name = "oumodulesbot"
version = "0.1.0"
description = ""
authors = ["Jerzy Kozera <jerzy.kozera@gmail.com>"]

[tool.poetry.dependencies]
"discord.py" = "^2.6.2"
python = "^3.11"
pylru = "^1.2.1"
httpx = "^0.28.1"
google-cloud-firestore = "^2.20.1"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
flake8 = "^7.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
mypy = "^1.16.1"
isort = "^6.0"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
