[tool.black]
line-length = 79
preview = true

[tool.poetry]
name = "oumodulesbot"
version = "0.1.0"
description = ""
authors = ["Jerzy Kozera <jerzy.kozera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
beautifulsoup4 = "^4.15.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.2.0"
mypy = "^1.19.1"
isort = "^8.0.0"

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.masonry.api"
